--- a/styles.css
+++ b/styles.css
@@ -105,8 +105,10 @@ body {
     width: 45%;    
 }
 
-.transaction-list h2 {
-    margin-bottom: 20px;
+.h2,
+h3 {
+   /* margin-bottom: 20px; */
+   margin: 20px 0px;
 }
 
 .transaction-list div {
@@ -122,3 +124,28 @@ body {
     justify-content: space-between;
     font-size: 1.2em;
 }
+
+.toggle-btn
+ {
+   
+    width: 100%;
+    padding: 10px;
+    margin: 20px 0px;
+    border: 1px solid #ccc;
+    border-radius: 20px;
+    background-color: #5f6366;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+    
+
+            
+        }
+        .toggle-content {
+            display: none;
+            margin-top: 10px;
+            padding-left: 15px;
+            
+        }
+
+ 
